fix(frontend) returns dark mode impl without affects codemirror

--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -100,6 +100,10 @@ html {
   color-scheme: light;
 }
 
+html.dark {
+  color-scheme: dark;
+}
+
 html,
 body,
 #app {
