--- a/frontend/src/styles/plugins.css
+++ b/frontend/src/styles/plugins.css
@@ -81,7 +81,7 @@
 .cm-code-block {
   font-family: inherit !important;
   background-color: transparent !important;
-  color: inherit !important;
+  color: #1f2328 !important;
   font-size: inherit !important;
 }
 
